--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <td>
                 <h1>Sayani Biswas</h1>
     <p><em>Computer Engineering Student;Aspiring Chef</em></p>
-    <p>I am a 20 year old girl residing in Kolkata, India currently. I have completed my school life at RKVM, Barrackpore and 
+    <p>Hi! I am a 20 year old girl residing in Kolkata, India currently. I have completed my schooling at RKVM, Barrackpore and 
        currently pursuing B.Tech in Computer Science Engineering from BP Poddar Institute of Management and Technology, Kolkata. 
        However, I aspire to be a chef professionally because I love cooking and it has been my dream for quite a long time now. </p>
     <a href="contact.html">Contact Me</a>
@@ -49,7 +49,8 @@
         <li>Cooking</li>
         <li>Reading Story Books</li>
         <li>Playing the Guitar</li>
-        <li>Watching Anime/Reading Mangas (You can view the list <a href="https://myanimelist.net/profile/NamaeWaSuzuha">here</a>)</li>
+        <li>Trying out new places to eat</li>
+        <li>Watching Anime/Reading Mangas (You can view the list <a href="https://myanimelist.net/profile/NamaeWaSuzuha">here</a>) :P</li>
     </ul>
     <hr>
     <h3>Skills</h3>
